--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  get: ^4.6.6
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.6.0
+  cloud_firestore: ^4.16.0
+  firebase_core: ^2.28.0
 
 dev_dependencies:
   flutter_test:
