--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.6.0
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
 
 dev_dependencies:
   flutter_test:
