--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 21
+        compileSdkVersion 34
         //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
