--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.6.0
   geolocator: ^7.6.2
+  geocoding: ^2.2.2
 
 
 dev_dependencies:
