--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   google_maps_flutter: ^2.6.0
   geolocator: ^7.6.2
   geocoding: ^2.2.2
-
+  firebase_core: ^2.10.6
+  firebase_cloud_firestore: ^4.15.8
 
 dev_dependencies:
   flutter_test:
