--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,5 @@ flutter {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
+    implementation plaatfom('com.google.firebase:firebase-auth:22.1.2')
 }
