--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,9 @@ dependencies:
   google_maps_flutter: ^2.6.0
   geolocator: ^7.6.2
   geocoding: ^2.2.2
-  firebase_core: ^2.10.6
+  firebase_core: ^2.29.0
   firebase_cloud_firestore: ^4.15.8
+  firebase_analytics: ^10.3.0
 
 dev_dependencies:
   flutter_test:
