--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,13 +49,10 @@ android {
         applicationId "com.example.geo_visor_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
-        compileSdkVersion 34
-        //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 30
+        minSdkVersion 24//flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnabled true
     }
 
     buildTypes {
@@ -72,5 +69,4 @@ flutter {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:32.8.0')
 }
