--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  get: ^4.6.6
-  google_fonts: ^6.2.1
-  google_maps_flutter: ^2.6.0
+  firebase_core: ^2.29.0
+  firebase_auth: ^4.19.1
   geolocator: ^7.6.2
   geocoding: ^2.2.2
-  firebase_core: ^2.29.0
-  firebase_cloud_firestore: ^4.15.8
-  firebase_analytics: ^10.3.0
+  google_maps_flutter: ^2.6.0
 
 dev_dependencies:
   flutter_test:
