--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   geolocator: ^7.6.2
   geocoding: ^2.2.2
   google_maps_flutter: ^2.6.0
+  firebase_cloud_firestore: ^4.15.8
 
 dev_dependencies:
   flutter_test:
