--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 
 
-        android:label="google_maps_in_flutter"
+        android:label="GeoVisor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
