--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  image_picker: ^0.8.4+3
+  firebase_storage: ^11.7.1
   firebase_core: ^2.29.0
   firebase_auth: ^4.19.1
   geolocator: ^7.6.2
   geocoding: ^2.2.2
   google_maps_flutter: ^2.6.0
   firebase_cloud_firestore: ^4.15.8
+  firebase_messaging: ^14.9.1
 
 dev_dependencies:
   flutter_test:
