--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,38 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"geovisor-88d44","appId":"1:190836327076:android:f1aa199ccd1e8e774c5c31","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"geovisor-88d44","configurations":{"android":"1:190836327076:android:f1aa199ccd1e8e774c5c31","web":"1:190836327076:web:28a2f09b7a08a0244c5c31","windows":"1:190836327076:web:3909b79ae29644ef4c5c31"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "geovisor-88d44",
+          "appId": "1:190836327076:android:f1aa199ccd1e8e774c5c31",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "geovisor-88d44",
+          "configurations": {
+            "android": "1:190836327076:android:f1aa199ccd1e8e774c5c31",
+            "web": "1:190836327076:web:28a2f09b7a08a0244c5c31",
+            "windows": "1:190836327076:web:3909b79ae29644ef4c5c31"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
+}
