--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_messaging: ^14.9.1
   firebase_analytics: ^10.10.4
   flutter_local_notifications: ^17.1.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
