--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_analytics: ^10.10.4
   flutter_local_notifications: ^17.1.2
   provider: ^6.1.2
+  image: ^4.2.0
+  path_provider:  ^2.1.3
 
 dev_dependencies:
   flutter_test:
